--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,6 +15,7 @@
 		<script src="/dist/socket.io.min.js"></script>
 		<script src="/socket.min.js"></script>
 		<script src="/webapp.js"></script>
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
 	</head>
 	<body ng-app="myApp">
 		<!-- Sidebars -->
